# trialexp

./: .dockerignore  .env  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  cron_run.sh  cron_run_lapis.sh  dock_compose_up.sh  docker-compose.yml  environment.yml  justfile  pyproject.toml  requirements.txt  run_pipeline.sh  run_spikesorting.sh  send_log_email.sh  settings.py  setup.py  test.csv  test2.csv  trialexp.yaml  wsl.env
.claude/agents/: code-reviewer.md  python-scientist-coder.md  test-engineer.md
apps/atlas_aligner/: package.json
apps/atlas_aligner/backend/: Dockerfile  pyproject.toml  startup.sh
apps/atlas_aligner/frontend/: package-lock.json
apps/atlas_aligner/frontend/src/: App.tsx
apps/atlasaligner/: README.md  nginx.conf  package-lock.json
apps/atlasaligner/backend/: Dockerfile  atlas_utils.py  main.py  pyproject.toml  startup.sh  test_async.py
apps/atlasaligner/frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
apps/atlasaligner/frontend/src/: App.tsx
apps/figure_viewer/: app.py  gallery.py
apps/signal_viewer/sidebar/components/: sidebar.py
atlas_aligner/: docker-compose.yml  package-lock.json  package.json
atlas_aligner/atlas_aligner/: package-lock.json  package.json
atlas_aligner/atlas_aligner/src/: App.tsx  main.tsx
atlas_aligner/backend/: Dockerfile  atlas_utils.py  server.py
atlas_aligner/frontend/src/: main.tsx
docs/: DEBUGGING_RESULTS.md  cell_classifications.md  refactor_plan_task_processors.md
env/: linux.env.example  linux_lapis.env.example  windows.env.example
extern_scripts/: display_style.s2s
figure_viewer/: app.py  gallery.py
libs/trialexp/: pyproject.toml
libs/trialexp/process/anatomy/: utils.py
libs/trialexp/process/pycontrol/: event_filters.py
notebooks/noncanonical/: nb20230215_164900_reaching_go_spout_bar_nov22_kms058_064.ipynb  nb20230220_083900_plot_session_bugfix.ipynb  nb20230308_123000_Rasha_Ach.ipynb  nb20230309_145600_session_history_kms058_64.ipynb  nb20230315_154600_Spike2Ppotometry.ipynb  nb20230317_120200_reaching_go_spout_incr_break2_nov22_RE602_604.ipynb  tmac.ipynb
notebooks/noncanonical/behavoral_analysis/: time_activitities_study.ipynb
notebooks/workflow/: Spike sync.ipynb  Spike sync_probeB.ipynb  Spike sync_time_all_align.ipynb  deeplabcut.ipynb  multi_session_analysis.ipynb  multi_session_analysis_filter.ipynb
params/: animal_info.csv  data_format.csv  tasks_params.csv  tasks_params.yaml  timewarp_spec.json
signal_viewer/: rxconfig.py
signal_viewer/sidebar/pages/: index.py
signal_viewer/signal_viewer/: signal_viewer.py  test1.py
signal_viewer_react/: package-lock.json  server.py
signal_viewer_react/signal-dashboard/: package-lock.json  package.json
signal_viewer_react/signal-dashboard/src/: App.tsx  Dashboard.tsx
src/trialexp/: config.py
src/trialexp/dataset_classes/: trial_dataset_classes.py
src/trialexp/process/: data_import.py
src/trialexp/process/anatomy/: utils.py
src/trialexp/process/ephys/: artifact_processing.py  artifact_removal.py  autocorrelograms.py  extremum_channel.py  firing_properties.py  plot_utils.py  spikes_preprocessing.py  utils.py
src/trialexp/process/folder_org/: utils.py
src/trialexp/process/model/: mutual_info.py  pytorch_decomposition.py  pytorch_deconv.py  utils.py
src/trialexp/process/processor/: BasePhotometryProcessor.py  BasePycontrolProcessor.py
src/trialexp/process/pycontrol/: event_filters.py  plot_utils.py  (+2 more)
src/trialexp/utils/: ephys_utilities.py  pycontrol_utilities.py  pyphotometry_utilities.py  rsync.py
tools/figure_viewer/: README.md  app.py  gallery.py  show_latest_log.sh
tools/variable_extractor/: extract_V.py
trialexp/: pyproject.toml
trialexp/process/anatomy/: utils.py
trialexp/process/ephys/: artifact_removal.py  photom_correlation.py  spikes_preprocessing.py  utils.py
trialexp/process/figures/: plot_utils.py
trialexp/process/folder_org/: utils.py
trialexp/process/model/: pytorch_deconv.py  utils.py
trialexp/process/pycontrol/: data_import.py  event_filters.py  plot_utils.py  session_analysis.py  utils.py
trialexp/process/pyphotometry/: linear_modelling.py  plotting_utils.py  utils.py
trialexp/utils/: ephys_utilities.py  pycontrol_utilities.py  pyphotometry_utilities.py
workflow/: README.md  Snakefile  modelling.smk  pycontrol.smk  spikesort.smk
workflow/scripts/: 00_create_session_folders.py  01_process_pycontrol.py  02_plot_pycontrol_data.py  03_export_parquet.py  03_export_spike2.py  04_import_pyphotometry.py  05_plot_pyphotometry.py  06_behavorial_analysis.py  07_time_warping.py  Interactive-1.interactive  settings.py
workflow/scripts/deeplabcut_headfixed/: 01_deeplabcut_training.py  02a_preprocess_video.py  02b_analyze_video.py  03_dlc_preprocess.py  04_sync_video.py  05_movement_analysis.py
workflow/scripts/deeplabcut_openfield/: 01_deeplabcut_training.py  02_evaluate.py  03_analyze_video.py  04_create_labeled_video.py
workflow/scripts/modelling/: 01_train_sparse_model.py  02_sparse_model_shuffle.py  03_train_sparse_model_cv.py  03_train_sparse_model_cv_debug.py  03_train_sparse_model_cv_debug_fixed.py  03b_train_sparse_model_cv_debug_simple.py  04_mutual_information.py  05_partial_info_decomp.py
workflow/scripts/sparse_encoding/: 01_train_model.py
workflow/scripts/spike_sorting/: _s04_ephys_sync.py  _s05_cell_metrics_processing.py  _s06_cell_metrics_aggregation.py  _s07_cell_metrics_dim_reduction.py  _s10_cell_anatomy.py  s01_sort_ks3.py  s01_sort_ks4.py  s02_cluster_metrics_ks3.py  s03_waveform_and_quality_metrics.py  s04_ephys_sync.py  s09_cell_to_xarray.py  s11_cell_overview_plot.py  s11b_cell_response_comparison.py  s12_session_correlations.py  s13_time_warping.py  s13b_time_warping_figures.py  s14_cell_classification.py  s15_curation.py  s16_localization.py
workflow/scripts/task_specific/: reaching_go_spout_incr_break2_April24.py  reaching_go_spout_incr_break2_nov22.py
workflows/: spikesort.smk  spout_bar_nov22.smk
workflows/config/: config.yaml
workflows/scripts/: 04_import_pyphotometry.py  s01_sort_ks3.py  settings.py
(+34 files in other folders)
